{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 14,
  "lineage": "d30237da-1ef5-8ae6-075e-c2cd6a89904f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:741448955963:internet-gateway/igw-0b3f2ee0f026f0102",
            "id": "igw-0b3f2ee0f026f0102",
            "owner_id": "741448955963",
            "region": "eu-north-1",
            "tags": {
              "Name": "DjangoRDSInternetGateway"
            },
            "tags_all": {
              "Name": "DjangoRDSInternetGateway"
            },
            "vpc_id": "vpc-031be3ffe018f878f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:741448955963:route-table/rtb-0dbd05ff56fb5c45e",
            "id": "rtb-0dbd05ff56fb5c45e",
            "owner_id": "741448955963",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b3f2ee0f026f0102",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DjangoRDSRouteTable"
            },
            "tags_all": {
              "Name": "DjangoRDSRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-031be3ffe018f878f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0954d4c5d9de0cdb5",
            "region": "eu-north-1",
            "route_table_id": "rtb-0dbd05ff56fb5c45e",
            "subnet_id": "subnet-0e03e3fb98fc4d5aa"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.default",
            "aws_subnet.subnet1",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e8a1059ae3b32d",
            "region": "eu-north-1",
            "route_table_id": "rtb-0dbd05ff56fb5c45e",
            "subnet_id": "subnet-046fb2d029a917ca0"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.default",
            "aws_subnet.subnet2",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:741448955963:security-group/sg-05a14eac564d46036",
            "description": "Allow all inbound traffic for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a14eac564d46036",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "DjangoRDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "741448955963",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-031be3ffe018f878f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:741448955963:subnet/subnet-0e03e3fb98fc4d5aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e03e3fb98fc4d5aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448955963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "DjangoRDSSubnet1"
            },
            "tags_all": {
              "Name": "DjangoRDSSubnet1"
            },
            "vpc_id": "vpc-031be3ffe018f878f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:741448955963:subnet/subnet-046fb2d029a917ca0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046fb2d029a917ca0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741448955963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "DjangoRDSSubnet2"
            },
            "tags_all": {
              "Name": "DjangoRDSSubnet2"
            },
            "vpc_id": "vpc-031be3ffe018f878f"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:741448955963:vpc/vpc-031be3ffe018f878f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0920d2be214caf309",
            "default_route_table_id": "rtb-0233963eba5b788e1",
            "default_security_group_id": "sg-0f4911422fbf75a55",
            "dhcp_options_id": "dopt-0989f41716373550f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031be3ffe018f878f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0233963eba5b788e1",
            "owner_id": "741448955963",
            "region": "eu-north-1",
            "tags": {
              "Name": "DjangoRDSVPC"
            },
            "tags_all": {
              "Name": "DjangoRDSVPC"
            }
          }
        }
      ]
    }
  ]
}